<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.opiflex.opiflexindustrialmonitoring.Settings">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:itemBackground="@color/BottomBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottommenu" />

    <LinearLayout
        android:id="@+id/ll_general"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:text="@string/settings_general"
            android:textSize="25sp"/>

        <!-- Horizontal divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <CheckBox
            android:id="@+id/cb_getPushNotif"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:text="@string/settings_getnotifications"/>

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="1dp"
            android:text="@string/settings_information"
            android:textSize="25sp"/>
        <!-- Horizontal divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_displayInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/settings_startTime"
                    android:tag="starttime"/>

                <CheckBox
                    android:id="@+id/cb_endTime"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/settings_endTime"
                    android:tag="endtime"/>

                <CheckBox
                    android:id="@+id/cb_running"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/settings_running"
                    android:tag="status"/>

                <CheckBox
                    android:id="@+id/cb_cycleTime"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/settings_cycleTime"
                    android:tag="cycle"/>

                <CheckBox
                    android:id="@+id/cb_station"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/settings_station"
                    android:tag="station"/>

                <CheckBox
                    android:id="@+id/cb_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/settings_speed"
                    android:tag="speed"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_selectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_selectAll" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_save" />

    </LinearLayout>

    <!--

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:text="@string/settings_information"
        android:textSize="25sp"/>
        -->

</android.support.constraint.ConstraintLayout>


