<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="se.opiflex.opiflexindustrialmonitoring.RobotDetailActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginBottom="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottommenu"/>


    <TextView
        android:id="@+id/tv_robotId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Robot ID"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/robot_in"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/tv_robotId"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_cell"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="Cell ID"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toEndOf="@+id/tv_in"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_producing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/robot_producing"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_robotId"/>

    <TextView
        android:id="@+id/tv_productname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="product name"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_producing"
        app:layout_constraintTop_toBottomOf="@+id/tv_robotId"/>

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="(0/0)"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_productname"
        app:layout_constraintTop_toBottomOf="@+id/tv_robotId"/>

    <ProgressBar
        android:id="@+id/pb_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_progresspercent"
        app:layout_constraintTop_toBottomOf="@+id/tv_producing"/>

    <TextView
        android:id="@+id/tv_progresspercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:text="0%"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_producing"/>

    <TextView
        android:id="@+id/tv_timeleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/robot_timeleft"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_progress"/>

    <TextView
        android:id="@+id/tv_timeleftValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="00:00:00"
        app:layout_constraintStart_toEndOf="@+id/tv_timeleft"
        app:layout_constraintTop_toBottomOf="@+id/pb_progress"/>

    <!-- Horizontal divider -->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_timeleft"/>

    <LinearLayout
        android:id="@+id/hl_pallets"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <TextView
            android:id="@+id/tv_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/robot_inputpallet"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tv_inputValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tv_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/robot_outputpallet"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tv_outputValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="17sp"/>

    </LinearLayout>

    <TableLayout
        android:id="@+id/tl_information"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tr_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="status">

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robot_status"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_statusVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="17sp"/>

        </TableRow>

        <TableRow
            android:id="@+id/tr_station"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="station">

            <TextView
                android:id="@+id/tv_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robot_station"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_stationVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="17sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tr_cycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="cycle">

            <TextView
                android:id="@+id/tv_avgcycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robot_cycletime"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_avgVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="17sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tr_speed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="speed">

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robot_speed"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_speedVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="17sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tr_starttime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="starttime">

            <TextView
                android:id="@+id/tv_starttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robot_starttime"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_startVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="17sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tr_endtime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="endtime">

            <TextView
                android:id="@+id/tv_endtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robot_endtime"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_endVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/lv_errors"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_information">

    </ListView>

</android.support.constraint.ConstraintLayout>
